--- a/config/default/manager_image_patch.yaml
+++ b/config/default/manager_image_patch.yaml
@@ -8,6 +8,6 @@ spec:
     spec:
       containers:
       # Change the value of image field below to your controller image URL (should match makefile)
-      - image: docker.io/service-catalog/podpreset-controller:latest
+      - image: podpreset-controller:latest
         name: manager
         imagePullPolicy: IfNotPresent
