--- a/webhook/Dockerfile
+++ b/webhook/Dockerfile
@@ -1,18 +1,22 @@
-# Copyright 2018 The Kubernetes Authors.
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
+# Get latest CA certs
+FROM alpine:latest as builder
+RUN apk --update add ca-certificates
 
-FROM alpine:latest
+RUN mkdir /user && \
+    echo 'appuser:x:2000:2000:appuser:/:' > /user/passwd && \
+    echo 'appuser:x:2000:' > /user/group
+RUN mkdir -p tmp
+
+# Final image
+FROM scratch
+COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
+COPY --from=builder /user/group /user/passwd /etc/
 
 ADD webhook /webhook
+
+USER appuser:appuser
+
+# appuser must be an owner of the tmp dir to write there
+COPY --from=builder --chown=appuser /tmp /tmp
+
 ENTRYPOINT ["/webhook"]
